app/static/css/style.css
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
    display: block;
}
body {
    line-height: 2;
    background-color: black;
    font-family: "Helvetica", sans-serif;
    color: white;
}

ol, ul {
    list-style: none;
}

blockquote, q {
    quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
    content: '';
    content: none;
}
table {
    border-collapse: collapse;
    border-spacing: 0;
}

p {
    display: block;
    margin-left: 200px;
    margin-right: 200px;
    text-align: center;
    font-size: 120%;
}

p.blue {
    color: blue;
}

ul, ol {
    display: block;
    margin-left: 100px;
    margin-right: 100px;
}

li {
    color: #00FF00;
    font-size: 110%;
    line-height: 175%;
}

p.big {
    font-size: 150%;
}

p.small {
    margin-left: 0px;
    margin-right: 0px;
    font-size: 100%;
}

p.left {
    text-align: left;
}

.instructions {
    color: gray;
}

.direction {
    display: block;
    float: left;
    width: 40px;
    font-size: 200%;
    font-weight: bold;
    color: blue;
}

#counter {
    text-align: center;
}

.scoreboard {
    clear: both;
}

